header fixed design align

--- a/style.css
+++ b/style.css
@@ -148,6 +148,23 @@ button {
   box-shadow: 0 0.25rem 1.875rem rgba(0, 0, 0, 0.08);
 }
 
+.menu-scrolled {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header.scrolled .menu-scrolled {
+  padding: 0 2rem;
+  height: 4rem;
+  display: block;
+  position: relative;
+}
+
 .header__name {
   font-family: 'Merriweather', serif;
   font-weight: 700;
@@ -164,8 +181,11 @@ button {
 
 .header.scrolled .header__name {
   font-size: 1.575rem;
-  left: 0;
-  transform: translateX(0);
+  left: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  margin: 0;
 }
 
 .header__profile-img {
@@ -183,6 +203,9 @@ button {
 }
 
 .header.scrolled .header__profile-img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
   pointer-events: auto;
@@ -200,8 +223,13 @@ button {
 }
 
 .header.scrolled .header__tiktok {
+  position: absolute;
+  right: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
   opacity: 1;
   pointer-events: auto;
+  left: auto;
 }
 
 .header__tiktok .tiktok-logo-header {
@@ -1187,8 +1215,8 @@ button {
 @media (min-width: 76rem) {
   main {
     max-width: 120rem;
-  
   }
+
 
   .hero {
     padding: 12.5rem 3.75rem 6.25rem;
@@ -1231,7 +1259,11 @@ button {
 
   .headline-hero__text {
     font-size: 2.75rem;
-    width: 100%;
+    width: 60%;
+  }
+
+  .hero-texts {
+    gap: 3rem;
   }
 
   .hero-texts__sub {
@@ -1281,7 +1313,7 @@ button {
 
 .prices__text {
   font-size: 2.75rem;
-  width: 80%;
+  width: 60%;
 }
 
 .prices__sub-text {
